--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "csrf": "^3.1.0",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
     "nodemon": "^2.0.20",
+    "paypal-rest-sdk": "^1.8.1",
     "redis": "^4.5.1",
     "uuid": "^9.0.0"
   }
