--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "correios-brasil": "^3.0.4",
     "csrf": "^3.1.0",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
